--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.19.7",
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~49.0.11",
+    "expo-app-loading": "^2.1.1",
+    "expo-auth-session": "^5.5.2",
     "expo-blur": "~12.4.1",
-    "expo-font": "~11.4.0",
+    "expo-font": "^12.0.5",
     "expo-haptics": "~12.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-location": "~16.1.0",
     "expo-router": "^2.0.9",
@@ -39,8 +42,7 @@
     "react-native-reanimated": "3.3.x",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-image-picker": "~14.3.2"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
